changed a bunch of stuff I think skills
